Prevent windows from disappearing off screen after dragging and changing images

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -39,7 +39,7 @@ $light-gray: #bfbfbf;
 
 .canvases {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: row;
 
   > div {
     margin: 10px;
